--- a/templates/adminbase.html.twig
+++ b/templates/adminbase.html.twig
@@ -45,6 +45,7 @@
             {% block bars %}{% endblock %}
         </div>
     </div>
+    {% block modal_content %}{% endblock modal_content %}
 {% endblock %}
 
 {% block javascripts %}
@@ -87,7 +88,7 @@
     <script src="{{ asset('vendors/bootstrap-daterangepicker/daterangepicker.js')}}"></script>
 
     <!-- Custom Theme Scripts -->
-    <script src="{{ asset('build/js/custom.min.js')}}"></script>
+    <script src="{{ asset('build/js/custom.js')}}"></script>
     <!-- Custom Theme Scripts -->
     <script src="{{ asset('vendors/datatables.net/js/jquery.dataTables.min.js') }}"></script>
     <script src="{{ asset('vendors/datatables.net-bs/js/dataTables.bootstrap.min.js') }}"></script>
@@ -103,11 +104,7 @@
     <!-- Summernote -->
     <script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.js"></script>
     <script>
-        var dataminetables = $('.dataminetables').dataTable({
-            "columnDefs": [
-                {"orderable": false, "targets": 0}
-            ]
-        });
+        var dataminetables = $('.dataminetables').dataTable();
 
         var datasorttables = $('.dataminetables').DataTable();
 
@@ -151,41 +148,7 @@
                 }
             });
         });
-
-        $(document).on("click",".del-link",function (e) {
-            /*$(".activate-link").click(function(e) {*/
-            e.preventDefault();
-            if(confirm("Voulez vous vraiment supprimer ?")){
-                var btn = $(this);
-                var link = $(this).attr("href");
-                $.ajax({
-                    url: link,
-                    method: 'POST',
-                    success: function(data){
-                        if(data.message=="success"){
-                            if(data.value===true){
-                                notif("success","Reussi","Suprimmé");
-                                // Get the position of the current data from the node
-                                var aPos = dataminetables.fnGetPosition( btn.closest('tr').get(0) );
-                                // Delete the row
-                                dataminetables.fnDeleteRow(aPos);
-                            }else if(data.value===false) {
-                                notif("warning","{{"backend.global.error"|trans }}", "{{"backend.global.an_unexpected_error"|trans }}"  );
-                            }
-
-
-                        }else {
-                            notif("error","{{"backend.global.error"|trans }}", "{{"backend.global.an_unexpected_error"|trans }}"  );
-                        }
-                    },
-                    error: function(xhr){
-                        notif("error","{{"backend.global.error"|trans }}", "{{"backend.global.an_unexpected_error"|trans }}"  );
-                    }
-                });
-            }
-        });
-
-
+        
         function notif(type,titre,text) {
             new PNotify({
                 title: titre,
@@ -196,58 +159,7 @@
         }
         // transform all select
         $('select').selectpicker();
-
-        $('#select_all').click(function() {
-            if ($(this).is(':checked')) {
-                $('.chkgrp').prop('checked', true);
-            } else {
-                $('.chkgrp').prop('checked', false);
-            }
-        });
-
-        $("#grpaction").submit(function (e) {
-            e.preventDefault();
-            var ids = [];
-            var action = $("#action_select").val();
-
-            datasorttables.rows().every(function (rowIdx, tableLoop, rowLoop) {
-                var data = this.node();
-                if ($(data).find("input[name='chkgrp\[\]']").prop('checked')) {
-                    ids.push($(this.data()[0]).val());
-                }
-            });
-            if (ids.length === 0){
-                alert("{{'backend.global.no_item_selected'|trans }}");
-            }else if (action === ""){
-                alert("{{'backend.global.choice_action'|trans }}")
-            } else {
-                if (confirm("{{"backend.global.please_confirm"|trans }}")){
-                    var link = $(this).attr("action");
-                    ;
-                    $.ajax({
-                        url: link,
-                        method: 'POST',
-                        data : {
-                            action:action,
-                            ids:ids
-                        },
-                        success: function(data){
-                            if(data.message==="success"){
-                                notif("success","Reussi",data.nb +" element(s) " +action);
-                                setTimeout(window.location.reload(), 2000);
-                            }else {
-                                $(".main_container").prepend(data);
-                                notif("error","{{"backend.global.error"|trans }}", "{{"backend.global.an_unexpected_error"|trans }}"  );
-                            }
-                        },
-                        error: function(xhr){
-                            notif("error","{{"backend.global.error"|trans }}", "{{"backend.global.an_unexpected_error"|trans }}"  );
-                        }
-                    });
-                }
-            }
-        });
-
+        
         $("body").on('DOMSubtreeModified', ".dataTables_info", function () {
 
             if ($("#select_all").is(':checked')) {
