--- a/templates/admin/reparticion/new.html.twig
+++ b/templates/admin/reparticion/new.html.twig
@@ -8,6 +8,9 @@
                 <div class="x_panel">
                     <div class="x_title">
                         <h2 class="title-page">Nueva repartición</h2>
+						<a class="btn btn-primary btn-sm float-right" style="margin-right:15px;" href="{{ path('index_reparticion') }}">
+							<i class="fa fa-mail-reply"></i> &nbsp; Volver al listado
+						</a>
                         <div class="clearfix"></div>
                     </div>
 			
