--- a/templates/admin/user/_delete_form.html.twig
+++ b/templates/admin/user/_delete_form.html.twig
@@ -1,30 +1,20 @@
 
+<div class="modal-header">
+  <h5 class="modal-title">¿Seguro desea eliminar el registro?</h5>
+  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+    <span aria-hidden="true">&times;</span>
+  </button>
+</div>
 
-<form method="post" action="{{ path('app_admin_delete_user', {'id': user.id}) }}">
-
+<div class="modal-body">
+  <form method="post" action="{{ path('app_admin_delete_user', {'id': user.id}) }}">
     <input type="hidden" name="_method" value="DELETE">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ user.id) }}">
-
-    <div class="row">
-      <div class="col">
-        ¿Seguro desea eliminar el registro?
-      </div>
-    </div>
-
-    <br>
-
-    <div class="row">
-      <div class="col">
-
-        <button style="margin-left:15px;" class="btn btn-sm btn-soft-danger float-right" type="submit" >
-          Si, eliminar
-        </button>
-
-        <button type="button" class="btn btn-sm btn-soft-light text-dark float-right" data-dismiss="modal">
-          No, cancelar
-        </button>
-
-      </div>
-    </div>
-
-</form>
+    <button class="btn btn-danger float-right" type="submit" >
+      Si, eliminar
+    </button>
+    <button type="button" class="btn btn-secondary float-right" data-dismiss="modal">
+      No, cancelar
+    </button>
+  </form>
+</div>
