--- a/templates/admin/user/user.html.twig
+++ b/templates/admin/user/user.html.twig
@@ -9,7 +9,9 @@
                         <h2 class="title-page">Lista de usuarios</h2>
                         <ul class="nav navbar-right panel_toolbox">
                             <li>
-								<a href="{{ path('app_admin_new_user') }}" class="btn btn-success-custom">Nuevo</a>
+								<a href="{{ path('app_admin_new_user') }}" class="btn btn-success-custom">
+                                    <i class="fa fa-plus"></i> &nbsp; Nuevo
+                                </a>
                             </li>
                         </ul>
                         <div class="clearfix"></div>
@@ -33,9 +35,14 @@
 												<td class="align-middle">{{ user.email }}</td>
 												<td class="align-middle">{{ user.nomComplet }}</td>
                                                 <td class="btn-cell-table align-middle">
-                                                    <a class="btn btn-primary btn-sm btn-table-margin" href="{{ path('app_admin_edit_user',{"id":user.id}) }}"><i class="fa fa-edit"></i></a>
+                                                    <a class="btn btn-primary btn-sm btn-table-margin" href="{{ path('app_admin_edit_user',{"id":user.id}) }}">
+                                                        <i class="fa fa-edit"></i>
+                                                    </a>
                                                     <a class="btn btn-danger btn-sm disable-btn del-link btn-table-margin" title="Eliminar registro" href="javascript:void(0)" data-toggle="modal" data-target="#modalEliminar{{user.id}}">
                                                         <i class="fa fa-trash"></i>
+                                                    </a>
+                                                    <a class="btn btn-success btn-sm btn-table-margin" href="{{ path('show_user',{"id":user.id}) }}">
+                                                        <i class="fa fa-th-large"></i>
                                                     </a>
                                                 </td>
                                             </tr>
@@ -54,7 +61,7 @@
 {% block modal_content %}
   {% for user in users %}
     <div id="modalEliminar{{ user.id }}" class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
-      <div class="modal-dialog modal-lg">
+      <div class="modal-dialog">
         <div class="modal-content">
           {{ include('admin/user/_delete_form.html.twig', {'id': user.id }) }}
         </div>
