Cambios alert message

--- a/templates/admin/reparticion/index.html.twig
+++ b/templates/admin/reparticion/index.html.twig
@@ -38,7 +38,7 @@
                                                         <i class="fa fa-trash"></i>
                                                     </a>                                                    
                                                     <a class="btn btn-success btn-sm btn-table-margin" href="{{ path('show_reparticion',{"id":reparticion.id}) }}">
-                                                        <i class="fa fa-th-large"></i>
+                                                        <i class="fa fa-search"></i>
                                                     </a>
                                                 </td>
                                             </tr>
