--- a/templates/admin/bars.html.twig
+++ b/templates/admin/bars.html.twig
@@ -11,13 +11,13 @@
             <!-- menu profile quick info -->
             <div class="profile clearfix">
                 <div class="profile_pic">
-                    {% if is_granted('ROLE_SUPERUSER') %}
+                    {# {% if is_granted('ROLE_SUPERUSER') %}
                     <img src="{{ app.user.avatarUrl(50) }}" alt="..." class="img-circle profile_img">
-                    {% endif %}
+                    {% endif %} #}
                 </div>
                 <div class="profile_info">
                     <span>{{ "backend.global.welcome"|trans }},</span>
-                    <h2>{{ app.user.nomComplet }}</h2>
+                    <h2>{{ app.user.apellido ~ app.user.nombre }}</h2>
                 </div>
             </div>
             <!-- /menu profile quick info -->
@@ -71,9 +71,9 @@
             <nav class="nav navbar-nav">
                 <ul class=" navbar-right">
                     <li class="nav-item dropdown open" style="padding-left: 15px;">
-                        <a href="javascript:;" class="user-profile dropdown-toggle" aria-haspopup="true" id="navbarDropdown" data-toggle="dropdown" aria-expanded="false">
+                        {# <a href="javascript:;" class="user-profile dropdown-toggle" aria-haspopup="true" id="navbarDropdown" data-toggle="dropdown" aria-expanded="false">
                             <img src="{{ app.user.avatarUrl(30) }}" alt="">{{ app.user.nomComplet }}
-                        </a>
+                        </a> #}
                         <div class="dropdown-menu dropdown-usermenu pull-right" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item"  href="{{ path('app_admin_changepswd') }}"><i class="fa fa-key pull-right"></i>{{ "backend.global.change_my_password"|trans }}</a>
                             <a class="dropdown-item"  href="{{ path('app_logout') }}"><i class="fa fa-sign-out pull-right"></i>{{ "backend.global.logout"|trans }}</a>
@@ -85,20 +85,81 @@
     </div>
     <!-- /top navigation -->
 
+    {# TO DO MODIFICAR MESSAGE FLASH  #}
     <!-- page content -->
     <div class="right_col" role="main">
+
+        {# Mensajes de ERROR #}
         {% for message in app.flashes("error") %}
-            <div class="alert alert-danger alert-dismissible " role="alert">
-                <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">×</span>
+            <div class="alert alert-danger alert-dismissible" role="alert">
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">×</span>
                 </button>
-                <strong>{{ "backend.global.error"|trans }}</strong> {{ message }}
+                <h5>{{message}}</h5>
             </div>
         {% endfor %}
-        {% for message in app.flashes("success") %}
-            <div class="alert alert-success alert-dismissible " role="alert">
-                <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">×</span>
+        {% for message in app.flashes("error-nuevo") %}
+            <div class="alert alert-danger alert-dismissible" role="alert">
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">×</span>
                 </button>
-                <strong>{{ "backend.global.success"|trans }}</strong> {{ message }}
+                <h4 class="alert-heading">Error al crear!</h4>
+                <h5>Ocurrió un problema al crear el registro.</h5>
+            </div>
+        {% endfor %}
+        {% for message in app.flashes("error-eliminado") %}            
+            <div class="alert alert-danger alert-dismissible" role="alert">
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">×</span>
+                </button>
+                <h4 class="alert-heading">Error al eliminar!</h4>
+                <h5>Ocurrió un problema al eliminar el registro.</h5>
+            </div>
+        {% endfor %}
+        {% for message in app.flashes("error-modificado") %}            
+            <div class="alert alert-danger alert-dismissible" role="alert">
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">×</span>
+                </button>
+                <h4 class="alert-heading">Error al modificar!</h4>
+                <h5>Ocurrió un problema al modificar el registro.</h5>
+            </div>
+        {% endfor %}
+
+        {# Mensajes de SUCCESS #}
+        {% for message in app.flashes("success") %}
+            <div class="alert alert-success alert-dismissible" role="alert">
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">×</span>
+                </button>
+                <h5>{{message}}</h5>
+            </div>
+        {% endfor %}
+        {% for message in app.flashes("success-nuevo") %}
+            <div class="alert alert-success alert-dismissible" role="alert">
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">×</span>
+                </button>
+                <h4 class="alert-heading">Creado!</h4>
+                <h5>El registro fue creado correctamente.</h5>
+            </div>
+        {% endfor %}
+        {% for message in app.flashes("success-eliminado") %}
+            <div class="alert alert-success alert-dismissible" role="alert">
+                <button class="float-right" type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">×</span>
+                </button>
+                <h4 class="float-left alert-heading">Eliminado!</h4>                
+                <h5>El registro fue eliminado correctamente.</h5>
+            </div>
+        {% endfor %}
+        {% for message in app.flashes("success-modificado") %}
+            <div class="alert alert-success alert-dismissible" role="alert">
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">×</span>
+                </button>
+                <h4 class="alert-heading">Modificado!</h4>
+                <h5>El registro fue modificado correctamente.</h5>
             </div>
         {% endfor %}
         {% block contenpage %}{% endblock %}
