--- a/templates/admin/user/user.html.twig
+++ b/templates/admin/user/user.html.twig
@@ -33,7 +33,7 @@
                                                 <td class="align-middle">{{ user.id }}</td>
                                                 <td class="align-middle">{{ user.username }}</td>
 												<td class="align-middle">{{ user.email }}</td>
-												<td class="align-middle">{{ user.nomComplet }}</td>
+												<td class="align-middle">{{ user.nombre }}</td>
                                                 <td class="btn-cell-table align-middle">
                                                     <a class="btn btn-primary btn-sm btn-table-margin" href="{{ path('app_admin_edit_user',{"id":user.id}) }}">
                                                         <i class="fa fa-edit"></i>
@@ -42,7 +42,7 @@
                                                         <i class="fa fa-trash"></i>
                                                     </a>
                                                     <a class="btn btn-success btn-sm btn-table-margin" href="{{ path('show_user',{"id":user.id}) }}">
-                                                        <i class="fa fa-th-large"></i>
+                                                        <i class="fa fa-search"></i>
                                                     </a>
                                                 </td>
                                             </tr>
