--- a/templates/admin/bars.html.twig
+++ b/templates/admin/bars.html.twig
@@ -146,10 +146,10 @@
         {% endfor %}
         {% for message in app.flashes("success-eliminado") %}
             <div class="alert alert-success alert-dismissible" role="alert">
-                <button class="float-right" type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                     <span aria-hidden="true">×</span>
                 </button>
-                <h4 class="float-left alert-heading">Eliminado!</h4>                
+                <h4 class="alert-heading">Eliminado!</h4>                
                 <h5>El registro fue eliminado correctamente.</h5>
             </div>
         {% endfor %}
