--- a/templates/reset_password/request.html.twig
+++ b/templates/reset_password/request.html.twig
@@ -8,20 +8,26 @@
 		<div class="alert alert-danger" role="alert">{{ flashError }}</div>
 	{% endfor %}
 	<div class="login_wrapper">
-		<div class="form login_form">
+			<div class="login_form_header">
+				<div class="isologotipo">
+					<h2>SIDI - TSJ La Rioja</h2>
+				</div>
+			</div>
+		<div class="animate form login_form">
 			<section class="login_content">
-				<h1>Reset password</h1>
+				<h1>Recuperar Contraseña</h1>
 				{{ form_start(requestForm) }}
 				{{ form_row(requestForm.email) }}
+				
+					<p>
+						Ingrese su dirección de Email y le enviaremos una enlace para recuperar su contraseña.
+					</p>
+			
 				<div>
-					<small>
-						Enter your email address and we we will send you a
-												                link to reset your password.
-					</small>
+				<br>
+					<button class="btn btn-success-full submit">Enviar</button>
+					{{ form_end(requestForm) }}
 				</div>
-
-				<button class="btn btn-primary">Send password reset email</button>
-				{{ form_end(requestForm) }}
 			</section>
 		</div>
 	</div>
