--- a/templates/admin/bars.html.twig
+++ b/templates/admin/bars.html.twig
@@ -15,10 +15,10 @@
                     <img src="{{ app.user.avatarUrl(50) }}" alt="..." class="img-circle profile_img">
                     {% endif %} #}
                 </div>
-                <div class="profile_info">
+                {# <div class="profile_info">
                     <span>{{ "backend.global.welcome"|trans }},</span>
                     <h2>{{ app.user.apellido ~ app.user.nombre }}</h2>
-                </div>
+                </div> #}
             </div>
             <!-- /menu profile quick info -->
 
@@ -71,9 +71,9 @@
             <nav class="nav navbar-nav">
                 <ul class=" navbar-right">
                     <li class="nav-item dropdown open" style="padding-left: 15px;">
-                        {# <a href="javascript:;" class="user-profile dropdown-toggle" aria-haspopup="true" id="navbarDropdown" data-toggle="dropdown" aria-expanded="false">
-                            <img src="{{ app.user.avatarUrl(30) }}" alt="">{{ app.user.nomComplet }}
-                        </a> #}
+                        <a href="javascript:;" class="user-profile dropdown-toggle" aria-haspopup="true" id="navbarDropdown" data-toggle="dropdown" aria-expanded="false">
+                            {{ app.user.apellido ~ "," ~ app.user.nombre }}
+                        </a>
                         <div class="dropdown-menu dropdown-usermenu pull-right" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item"  href="{{ path('app_admin_changepswd') }}"><i class="fa fa-key pull-right"></i>{{ "backend.global.change_my_password"|trans }}</a>
                             <a class="dropdown-item"  href="{{ path('app_logout') }}"><i class="fa fa-sign-out pull-right"></i>{{ "backend.global.logout"|trans }}</a>
