--- a/templates/admin/reparticion/index.html.twig
+++ b/templates/admin/reparticion/index.html.twig
@@ -16,37 +16,75 @@
                         </ul>
                         <div class="clearfix"></div>
                     </div>
+
+                    {{ include('admin/reparticion/_filtro.html.twig', {'form': formFiltro}) }}
+
                     <div class="x_content">
                         <div class="row">
                             <div class="table-responsive">
-                                <table id="example" class="display table table-striped table-bordered dataminetables" >
-                                    <thead>                                      
-                                        <th class="btn-table-width">Id</th>
-                                        <th>Nombre</th>
-                                        <th class="btn-table-width">Acciones</th>
+                                <table id="example" class="display table table-striped table-bordered" >
+                                    {# Títulos de tabla #}
+                                    <thead>
+                                        <th scope="col" class="font-weight-semi-bold py-2" style="cursor: auto;" width="100px">
+                                            <div class="d-flex justify-content-between align-items-center">
+                                                {{ knp_pagination_sortable(pagination, 'ID', 'e.id') }}
+                                                {% if pagination.getSort == 'e.id' and pagination.getDirection == 'asc' %}
+                                                    <i class="fa fa-level-up"></i>
+                                                {% elseif pagination.getSort == 'e.id' and pagination.getDirection == 'desc' %}
+                                                    <i class="fa fa-level-down"></i>
+                                                {% endif %}
+                                            </div>
+                                        </th>
+                                        <th scope="col" class="font-weight-semi-bold py-2" style="cursor: auto;">
+                                            <div class="d-flex justify-content-between align-items-center">
+                                                {{ knp_pagination_sortable(pagination, 'Nombre', 'e.nombre') }}
+                                                {% if pagination.getSort == 'e.nombre' and pagination.getDirection == 'asc' %}
+                                                    <i class="fa fa-level-up"></i>
+                                                {% elseif pagination.getSort == 'e.nombre' and pagination.getDirection == 'desc' %}
+                                                    <i class="fa fa-level-down"></i>
+                                                {% endif %}
+                                            </div>
+                                        </th>
+                                        <th class="btn-table-width" style="cursor: auto;">
+                                            Acciones
+                                        </th>
                                     </thead>
+                                    {# FIN Títulos de tabla #}
+                                    
                                     <tbody>
-                                        {% for reparticion in reparticiones %}
+                                        {% for reparticion in pagination %}
                                             <tr>
-                                                <td class="align-middle">{{ reparticion.id }}</td>
-                                                <td class="align-middle">{{ reparticion.nombre }}</td>
+                                                <td class="align-middle td-cursor" onClick="window.location='{{ path('show_reparticion',{"id":reparticion.id}) }}'">{{ reparticion.id }}</td>
+                                                <td class="align-middle td-cursor" onClick="window.location='{{ path('show_reparticion',{"id":reparticion.id}) }}'">{{ reparticion.nombre }}</td>
                                                 <td class="btn-cell-table align-middle">
-                                                    <a class="btn btn-primary btn-sm btn-table-margin" alt="Editar" href="{{ path('edit_reparticion',{"id":reparticion.id}) }}">
+                                                    <a class="btn btn-primary btn-sm btn-table-margin mt-1 mb-1" alt="Editar" href="{{ path('edit_reparticion',{"id":reparticion.id}) }}">
                                                         <i class="fa fa-edit"></i>
                                                     </a>
-                                                    <a class="btn btn-danger btn-sm btn-table-margin" title="Eliminar registro" href="javascript:void(0)" data-toggle="modal" data-target="#modalEliminar{{reparticion.id}}">
+                                                    <a class="btn btn-danger btn-sm btn-table-margin mt-1 mb-1" title="Eliminar registro" href="javascript:void(0)" data-toggle="modal" data-target="#modalEliminar{{reparticion.id}}">
                                                         <i class="fa fa-trash"></i>
-                                                    </a>                                                    
-                                                    <a class="btn btn-success btn-sm btn-table-margin" href="{{ path('show_reparticion',{"id":reparticion.id}) }}">
-                                                        <i class="fa fa-search"></i>
                                                     </a>
                                                 </td>
                                             </tr>
                                         {% endfor %}
                                     </tbody>
                                 </table>
-                            </div>                            
-                        </div>
+                            </div>
+
+                            {# Pagination #}
+                            <div class="row justify-content-between m-0 w-100 mt-2">
+                                <div class="col-4">
+                                    <div class="d-flex mb-2 mb-md-0 d-inline-flex">
+                                        {{ pagination.getTotalItemCount }} {{ pagination.getTotalItemCount == 1 ? " registro" : " registros" }} en total
+                                    </div>
+                                </div>
+                                <div class="col-4 text-right">
+                                    <div class="d-inline-flex align-items-end">
+                                        {{ knp_pagination_render(pagination) }}
+                                    </div>
+                                </div>
+                            </div>
+                            {# END Pagination #}
+                        </div>                        
                     </div>
                 </div>
             </div>
@@ -55,7 +93,7 @@
 {% endblock %}
 
 {% block modal_content %}
-  {% for reparticion in reparticiones %}
+  {% for reparticion in pagination %}
     <div id="modalEliminar{{ reparticion.id }}" class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
