--- a/templates/admin/user/show.html.twig
+++ b/templates/admin/user/show.html.twig
@@ -7,7 +7,7 @@
     <div class="col-md-12">
       <div class="x_panel">
         <div class="x_title">
-            <h2 class="title-page">Usuario ID: {{ user.id }}</h2>            
+            <h2 class="title-page">Usuario ID: {{ user.id }}</h2>
             <a class="btn btn-primary btn-sm float-right" style="margin-right:15px;" href="{{ path('app_admin_users') }}">
               <i class="fa fa-mail-reply"></i> &nbsp; Volver al listado
             </a>
@@ -27,7 +27,12 @@
                         {# Nombre #}
                         <tr>
                           <th width="150" class="text-right">Nombre:</th>
-                          <td>{{ user.nomComplet }}</td>
+                          <td>{{ user.nombre }}</td>
+                        </tr>
+                        {# Apellido #}
+                        <tr>
+                          <th width="150" class="text-right">Apellido:</th>
+                          <td>{{ user.apellido }}</td>
                         </tr>
                         {# Email #}
                         <tr>
@@ -38,6 +43,26 @@
                         <tr>
                           <th width="150" class="text-right">Usuario:</th>
                           <td>{{ user.username }}</td>
+                        </tr>
+                        {# DNI #}
+                        <tr>
+                          <th width="150" class="text-right">DNI:</th>
+                          <td>{{ user.dni }}</td>
+                        </tr>
+                        {# CUIL #}
+                        <tr>
+                          <th width="150" class="text-right">CUIL:</th>
+                          <td>{{ user.cuil }}</td>
+                        </tr>
+                        {# Teléfono #}
+                        <tr>
+                          <th width="150" class="text-right">Teléfono:</th>
+                          <td>{{ user.telefono }}</td>
+                        </tr>
+                        {# Dirección #}
+                        <tr>
+                          <th width="150" class="text-right">Dirección:</th>
+                          <td>{{ user.direccion }}</td>
                         </tr>
                         {# Roles #}                        
                           <tr>
