--- a/templates/admin/bars.html.twig
+++ b/templates/admin/bars.html.twig
@@ -28,7 +28,7 @@
             <div id="sidebar-menu" class="main_menu_side hidden-print main_menu ">
                 <div class="menu_section">
                     <ul class="nav side-menu">
-                        <li><a href="{{ path('app_admin_index') }}"><i class="fa fa-home"></i> {{ "backend.menu.home"|trans }}</a>
+                        <li><a href="{{ path('inicio_index') }}"><i class="fa fa-home"></i> {{ "backend.menu.home"|trans }}</a>
                         </li>
                         {% if is_granted("ROLE_SUPERUSER") %}
                         <li><a><i class="fa fa-user"></i> {{ "backend.menu.user"|trans }} <span class="fa fa-chevron-down"></span></a>
