Favicon y limpieza de consola

--- a/templates/admin/bars.html.twig
+++ b/templates/admin/bars.html.twig
@@ -3,7 +3,7 @@
     <div class="col-md-3 left_col menu_fixed">
         <div class="left_col scroll-view">
             <div class="navbar nav_title" style="border: 0;">
-                <a href="{{ path('app_admin_index') }}" class="site_title"><i class="fa fa-paw"></i> <span>ONEHEALTH</span></a>
+                <a href="{{ path('inicio_index') }}" class="site_title"><i class="fa fa-paw"></i> <span>ONEHEALTH</span></a>
             </div>
 
             <div class="clearfix"></div>
