--- a/templates/adminbase.html.twig
+++ b/templates/adminbase.html.twig
@@ -6,7 +6,7 @@
     <!-- Meta, title, CSS, favicons, etc. -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="images/favicon.ico" type="image/ico" />
+    <link rel="icon" href="{{ asset('build/images/favicon.ico') }}" type="image/ico" />
 {% endblock %}
 {% block stylesheets %}
 
